# otel-metrics-basic

./: Cargo.toml
src/: main.rs
